--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 recursive-include x_driver *.json *.js
-recursive-include x_driver *.json
-recursive-include x_driver/driver *.js
+recursive-include x_driver/patches *.js
+recursive-include x_driver/patches *.json
